@@ -1,5 +1,10 @@
 
 ----- cvs ci ------
+Sat Jan 27 15:22:41 NOVT 2001
+max:
+* autoAreaCreateMask token
+
+----- cvs ci ------
 Sat Jan 20 21:56:54 NOVT 2001
 max:
 + autopassive token
